# mlkem-esp32-bench

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run_bench.sh  run_tests.sh  sdkconfig.defaults  sdkconfig.defaults.bench
acvp-data/v1.1.0.41/files/ML-KEM-encapDecap-FIPS203/: expectedResults.json
acvp-data/v1.1.0.41/files/ML-KEM-keyGen-FIPS203/: expectedResults.json  prompt.json
docs/: CAVEATS.md
scripts/: convert_acvp_vector_to_source_code.py  convert_wycheproof_vector_to_source_code.py
src/components/benchmark/: CMakeLists.txt  benchmark.c
src/components/benchmark/include/: benchmark.h
src/components/fips202/: CMakeLists.txt  fips202.c
src/components/fips202/include/: fips202.h
src/components/mlkem/: CMakeLists.txt  compression_util.c  decaps.c  encaps.c  keygen.c  ntt.c  params.c  poly.c
src/components/mlkem/include/: compression_util.h  kpke.h  mlkem.h  ntt.h  params.h  poly.h
src/components/tests/: CMakeLists.txt  fips202_tests.c  mlkem_kat_vectors.c  mlkem_kat_vectors.h  mlkem_tests.c  mlkem_wycheproof_vectors.h  tests.c
src/main/: CMakeLists.txt  Kconfig.projbuild  main.c
src/util/: CMakeLists.txt  util.c
src/util/include/: util.h
test-data/acvp-data/v1.1.0.41/files/ML-KEM-encapDecap-FIPS203/: prompt.json
